--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,4 +24,10 @@ jobs:
         dotnet-version: 3.1.100
 
     - name: Run
+      run: dotnet tool install gpr -g
+
+    - name: Run
+      run: gpr list -k ${{secrets.GITHUB_TOKEN}}
+
+    - name: Run
       run: dotnet run --project Bannerlord.ReferenceAssemblies/Bannerlord.ReferenceAssemblies.csproj --configuration Release --login ${{secrets.STEAM_LOGIN}} --pass ${{secrets.STEAM_PASSWORD}} --gtoken ${{secrets.GITHUB_TOKEN}}
