--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,6 +12,21 @@ jobs:
   build:   
     runs-on: ubuntu-latest
     steps:
+    - uses: actions/delete-package-versions@v1
+      with:
+        package-name: Bannerlord.ReferenceAssemblies.Core
+    - uses: actions/delete-package-versions@v1
+      with:
+        package-name: Bannerlord.ReferenceAssemblies.StoryMode
+    - uses: actions/delete-package-versions@v1
+      with:
+        package-name: Bannerlord.ReferenceAssemblies.Native
+    - uses: actions/delete-package-versions@v1
+      with:
+        package-name: Bannerlord.ReferenceAssemblies.CustomBattle
+    - uses: actions/delete-package-versions@v1
+      with:
+        package-name: Bannerlord.ReferenceAssemblies.SandBox
 
     - name: Checkout Repository
       uses: actions/checkout@v2
