--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "DepotDownloader"]
 	path = DepotDownloader
 	url = https://github.com/Bannerlord-Unofficial-Modding-Community/DepotDownloader
+[submodule "ReferenceAssemblyGenerator"]
+	path = ReferenceAssemblyGenerator
+	url = https://github.com/Tyler-IN/ReferenceAssemblyGenerator
