--- a/.github/workflows/Generate References.yml
+++ b/.github/workflows/Generate References.yml
@@ -22,11 +22,8 @@ jobs:
       with:
         dotnet-version: 3.1.100
 
-    - name: Run
+    - name: Install GPR
       run: dotnet tool install gpr -g
 
-    - name: Run
-      run: gpr list -k ${{secrets.GITHUB_TOKEN}}
-
-    - name: Run
+    - name: Run Bannerlord.ReferenceAssemblies
       run: dotnet run --project Bannerlord.ReferenceAssemblies/Bannerlord.ReferenceAssemblies.csproj --configuration Release --login ${{secrets.STEAM_LOGIN}} --pass ${{secrets.STEAM_PASSWORD}} --gtoken ${{secrets.GITHUB_TOKEN}}
