--- a/Bannerlord.ReferenceAssemblies/Bannerlord.ReferenceAssemblies.csproj
+++ b/Bannerlord.ReferenceAssemblies/Bannerlord.ReferenceAssemblies.csproj
@@ -13,6 +13,14 @@
 
   <ItemGroup>
     <PackageReference Include="PCLExt.FileStorage-devel" Version="1.5.0.294" />
+    <PackageReference Include="ReferenceAssemblyGenerator" Version="2.0.0">
+      <GeneratePathProperty>true</GeneratePathProperty>
+    </PackageReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Reference Include="$(PkgReferenceAssemblyGenerator)\tools\netcoreapp3.1\any\ReferenceAssemblyGenerator.dll">
+      <HintPath>%(Identity)</HintPath>
+    </Reference>
   </ItemGroup>
 
   <ItemGroup>
