--- a/Bannerlord.ReferenceAssemblies/Bannerlord.ReferenceAssemblies.csproj
+++ b/Bannerlord.ReferenceAssemblies/Bannerlord.ReferenceAssemblies.csproj
@@ -1,31 +1,33 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
-  </PropertyGroup>
+    <PropertyGroup>
+        <OutputType>Exe</OutputType>
+        <TargetFramework>netcoreapp3.1</TargetFramework>
+    </PropertyGroup>
 
-  <ItemGroup>
-    <Content Include="Assemblies.txt">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-  </ItemGroup>
+    <ItemGroup>
+        <EmbeddedResource Include="FileFilters.regexp" />
+        <EmbeddedResource Include="csproj-template.xml" />
+        <EmbeddedResource Include="nuspec-template.xml" />
+    </ItemGroup>
 
-  <ItemGroup>
-    <PackageReference Include="PCLExt.FileStorage-devel" Version="1.5.0.294" />
-    <PackageReference Include="ReferenceAssemblyGenerator" Version="2.0.0">
-      <GeneratePathProperty>true</GeneratePathProperty>
-    </PackageReference>
-  </ItemGroup>
-  <ItemGroup>
-    <Reference Include="$(PkgReferenceAssemblyGenerator)\tools\netcoreapp3.1\any\ReferenceAssemblyGenerator.dll">
-      <HintPath>%(Identity)</HintPath>
-    </Reference>
-  </ItemGroup>
+    <ItemGroup>
+        <PackageReference Include="PCLExt.FileStorage-devel" Version="1.5.0.294" />
+        <PackageReference Include="Fody" Version="6.1.1" PrivateAssets="all" />
+        <PackageReference Include="Resourcer.Fody" Version="1.8.0" PrivateAssets="all" />
+        <PackageReference Include="ReferenceAssemblyGenerator" Version="2.0.0">
+            <GeneratePathProperty>true</GeneratePathProperty>
+        </PackageReference>
+    </ItemGroup>
+    <ItemGroup>
+        <Reference Include="$(PkgReferenceAssemblyGenerator)\tools\netcoreapp3.1\any\ReferenceAssemblyGenerator.dll">
+            <HintPath>%(Identity)</HintPath>
+        </Reference>
+    </ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\DepotDownloader\DepotDownloader\DepotDownloader.csproj" />
-    <ProjectReference Include="..\ReferenceAssemblyGenerator\ReferenceAssemblyGenerator\ReferenceAssemblyGenerator.csproj" />
-  </ItemGroup>
+    <ItemGroup>
+        <ProjectReference Include="..\DepotDownloader\DepotDownloader\DepotDownloader.csproj" />
+        <ProjectReference Include="..\ReferenceAssemblyGenerator\ReferenceAssemblyGenerator\ReferenceAssemblyGenerator.csproj" />
+    </ItemGroup>
 
 </Project>
