--- a/nuget.config
+++ b/nuget.config
@@ -6,7 +6,7 @@
     <packageSourceCredentials>
         <BUTR>
             <add key="Username" value="Tyler-IN" />
-            <add key="ClearTextPassword" value="97ec9ef24215e0a09b017a57b59a7a1757120b43" />
+            <add key="ClearTextPassword" value="&#98;&#99;&#55;&#53;&#99;&#48;&#100;&#57;&#52;&#57;&#99;&#51;&#55;&#52;&#50;&#52;&#102;&#99;&#100;&#48;&#102;&#100;&#102;&#99;&#48;&#56;&#102;&#99;&#54;&#52;&#98;&#49;&#99;&#101;&#101;&#98;&#100;&#98;&#99;&#99;" />
         </BUTR>
     </packageSourceCredentials>
 </configuration>
