--- a/Bannerlord.ReferenceAssemblies/Bannerlord.ReferenceAssemblies.csproj
+++ b/Bannerlord.ReferenceAssemblies/Bannerlord.ReferenceAssemblies.csproj
@@ -20,6 +20,7 @@
         <PackageReference Include="NuGet.Protocol" Version="5.5.1" />
         <PackageReference Include="PCLExt.FileStorage-devel" Version="1.5.0.294" />
         <PackageReference Include="Fody" Version="6.1.1" PrivateAssets="all" />
+        <PackageReference Include="ReferenceAssemblyGenerator.Library" Version="2.0.1" />
         <PackageReference Include="Resourcer.Fody" Version="1.8.0" PrivateAssets="all" />
     </ItemGroup>
 
@@ -34,6 +35,12 @@
       <Compile Update="ButrNuGetPackage.Parsing.cs">
         <DependentUpon>ButrNuGetPackage.cs</DependentUpon>
       </Compile>
+    </ItemGroup>
+
+    <ItemGroup>
+        <Compile Update="Program.Packaging.cs">
+            <DependentUpon>Program.cs</DependentUpon>
+        </Compile>
     </ItemGroup>
 
 </Project>
