--- a/Bannerlord.ReferenceAssemblies/Bannerlord.ReferenceAssemblies.csproj
+++ b/Bannerlord.ReferenceAssemblies/Bannerlord.ReferenceAssemblies.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
         <OutputType>Exe</OutputType>
@@ -22,6 +22,7 @@
         <PackageReference Include="Fody" Version="6.1.1" PrivateAssets="all" />
         <PackageReference Include="ReferenceAssemblyGenerator.Library" Version="2.0.1" />
         <PackageReference Include="Resourcer.Fody" Version="1.8.0" PrivateAssets="all" />
+        <PackageReference Include="System.Linq.Async" Version="4.1.1" />
     </ItemGroup>
 
     <ItemGroup>
