--- a/nuget.config
+++ b/nuget.config
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <packageSources>
-        <add key="BUTR" value="https://nuget.pkg.github.com/Bannerlord-Unofficial-Tools-Resources/index.json" />
+        <add key="BUTR" value="https://nuget.pkg.github.com/BUTR/index.json" />
     </packageSources>
     <packageSourceCredentials>
         <BUTR>
