--- a/.github/workflows/Generate References.yml
+++ b/.github/workflows/Generate References.yml
@@ -11,7 +11,7 @@ on:
   
 jobs:
   build:   
-    runs-on: [self-hosted, linux]
+    runs-on: windows-latest
     steps:
     - name: Checkout Repository
       uses: actions/checkout@v2
