--- a/.github/workflows/Generate References.yml
+++ b/.github/workflows/Generate References.yml
@@ -8,7 +8,15 @@ on:
       - master
   schedule:
     - cron: "0 */8 * * *"
-  
+
+env:
+  # Disable the .NET logo in the console output.
+  DOTNET_NOLOGO: true
+  # Disable the .NET first time experience to skip caching NuGet packages and speed up the build.
+  DOTNET_SKIP_FIRST_TIME_EXPERIENCE: true
+  # Disable sending .NET CLI telemetry to Microsoft.
+  DOTNET_CLI_TELEMETRY_OPTOUT: true
+
 jobs:
   build:   
     runs-on: windows-latest
@@ -21,7 +29,7 @@ jobs:
     - name: Setup .NET Core (3.1.100)
       uses: actions/setup-dotnet@master
       with:
-        dotnet-version: 3.1.100
+        dotnet-version: 3.1.x
 
     - name: Restore Tools
       run: dotnet tool restore
