--- a/.github/workflows/Generate References.yml
+++ b/.github/workflows/Generate References.yml
@@ -26,10 +26,10 @@ jobs:
       with:
         submodules: 'recursive'
       
-    - name: Setup .NET Core (3.1.100)
+    - name: Setup .NET Core (5.0.x)
       uses: actions/setup-dotnet@master
       with:
-        dotnet-version: 3.1.x
+        dotnet-version: 5.0.x
 
     - name: Restore Tools
       run: dotnet tool restore
