--- a/.github/workflows/Generate References.yml
+++ b/.github/workflows/Generate References.yml
@@ -47,7 +47,7 @@ jobs:
           dotnet tool install -g FetchBannerlordVersion;
 
     - name: Run Bannerlord.ReferenceAssemblies
-      run: dotnet run --project Bannerlord.ReferenceAssemblies/Bannerlord.ReferenceAssemblies.csproj --configuration Debug --steamLogin ${{secrets.STEAM_LOGIN}} --steamPassword ${{secrets.STEAM_PASSWORD}} --steamAppId 261550 --steamOS windows --steamOSArch 64 --steamDepotId 261551 --packageBaseName Bannerlord.ReferenceAssemblies --feedUrl https://nuget.pkg.github.com/BUTR/index.json --feedUser Aragas --feedPassword ${{secrets.GITHUB_TOKEN}}
+      run: dotnet run --project src/Bannerlord.ReferenceAssemblies/Bannerlord.ReferenceAssemblies.csproj --configuration Debug --steamLogin ${{secrets.STEAM_LOGIN}} --steamPassword ${{secrets.STEAM_PASSWORD}} --steamAppId 261550 --steamOS windows --steamOSArch 64 --steamDepotId 261551 --packageBaseName Bannerlord.ReferenceAssemblies --feedUrl https://nuget.pkg.github.com/BUTR/index.json --feedUser Aragas --feedPassword ${{secrets.GITHUB_TOKEN}}
 
     - name: Push to NuGet
       run: dotnet nuget push "./src/Bannerlord.ReferenceAssemblies/bin/Debug/net5.0/final/*.nupkg" -k ${{secrets.NUGET_API_KEY}} -s https://www.nuget.org
