--- a/.github/workflows/Generate References.yml
+++ b/.github/workflows/Generate References.yml
@@ -21,25 +21,10 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout Repository
-      uses: actions/checkout@v2
+    - name: Setup
+      uses: butr/actions-common-setup@v1.1
       with:
-        submodules: 'recursive'
-
-    - name: Setup .NET Core 5.0.x
-      uses: actions/setup-dotnet@master
-      with:
-        dotnet-version: 5.0.x
-    - name: Setup .NET Core 3.1.x
-      uses: actions/setup-dotnet@master
-      with:
-        dotnet-version: 3.1.x
-    - name: Setup BUTR GPR
-      uses: actions/setup-dotnet@master
-      with:
-        source-url: https://nuget.pkg.github.com/BUTR/index.json
-      env:
-        NUGET_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
+        github-token: ${{secrets.GITHUB_TOKEN}}
 
     - name: Install Tools
       run: >-
