--- a/.github/workflows/Generate References.yml
+++ b/.github/workflows/Generate References.yml
@@ -28,11 +28,16 @@ jobs:
       uses: actions/setup-dotnet@master
       with:
         dotnet-version: 5.x.x
-     
+
     - name: Setup .NET 6
       uses: actions/setup-dotnet@master
       with:
         dotnet-version: 6.x.x
+
+    - name: Setup .NET 7
+      uses: actions/setup-dotnet@master
+      with:
+        dotnet-version: 7.x.x
 
     - name: Install Tools
       run: >-
@@ -40,7 +45,7 @@ jobs:
           dotnet tool install -g FetchBannerlordVersion;
 
     - name: Run Bannerlord.ReferenceAssemblies
-      run: dotnet run --project src/Bannerlord.ReferenceAssemblies/Bannerlord.ReferenceAssemblies.csproj --configuration Debug --steamLogin ${{secrets.STEAM_LOGIN}} --steamPassword ${{secrets.STEAM_PASSWORD}} --steamAppId 261550 --steamOS windows --steamOSArch 64 --steamDepotId 261551 --packageBaseName Bannerlord.ReferenceAssemblies --feedUrl https://nuget.pkg.github.com/BUTR/index.json --feedUser Aragas --feedPassword ${{secrets.GITHUB_TOKEN}}
+      run: dotnet run --project src/Bannerlord.ReferenceAssemblies/Bannerlord.ReferenceAssemblies.csproj --configuration Debug --steamLogin ${{secrets.STEAM_LOGIN}} --steamPassword ${{secrets.STEAM_PASSWORD}} --steamAppId 261550 --steamOS windows --steamOSArch 64 --steamDepotId 261551 261552 --packageBaseName Bannerlord.ReferenceAssemblies --feedUrl https://nuget.pkg.github.com/BUTR/index.json --feedUser Aragas --feedPassword ${{secrets.GITHUB_TOKEN}}
 
     - name: Check files
       id: check_files
