--- a/src/Bannerlord.ReferenceAssemblies/Bannerlord.ReferenceAssemblies.csproj
+++ b/src/Bannerlord.ReferenceAssemblies/Bannerlord.ReferenceAssemblies.csproj
@@ -2,9 +2,9 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net7.0</TargetFramework>
     <Nullable>enable</Nullable>
-    <LangVersion>9.0</LangVersion>
+    <LangVersion>10.0</LangVersion>
     <TieredCompilation>false</TieredCompilation>
   </PropertyGroup>
 
@@ -18,6 +18,7 @@
 
   <ItemGroup>
     <PackageReference Include="CommandLineParser" Version="2.9.1" />
+    <PackageReference Include="Harmony.Extensions" Version="3.1.0.61" />
     <PackageReference Include="Lib.Harmony" Version="2.2.2" />
     <PackageReference Include="NuGet.Configuration" Version="6.3.0" />
     <PackageReference Include="NuGet.Protocol" Version="6.3.0" />
