--- a/src/Bannerlord.ReferenceAssemblies/Bannerlord.ReferenceAssemblies.csproj
+++ b/src/Bannerlord.ReferenceAssemblies/Bannerlord.ReferenceAssemblies.csproj
@@ -17,6 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Bannerlord.ModuleManager" Version="4.0.150" />
     <PackageReference Include="CommandLineParser" Version="2.9.1" />
     <PackageReference Include="Harmony.Extensions" Version="3.1.0.67" />
     <PackageReference Include="Lib.Harmony" Version="2.2.2" />
