--- a/src/Bannerlord.ReferenceAssemblies/Bannerlord.ReferenceAssemblies.csproj
+++ b/src/Bannerlord.ReferenceAssemblies/Bannerlord.ReferenceAssemblies.csproj
@@ -5,7 +5,6 @@
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <LangVersion>10.0</LangVersion>
-    <TieredCompilation>false</TieredCompilation>
   </PropertyGroup>
 
   <ItemGroup>
@@ -20,6 +19,7 @@
     <PackageReference Include="Bannerlord.ModuleManager" Version="4.0.150" />
     <PackageReference Include="CommandLineParser" Version="2.9.1" />
     <PackageReference Include="Harmony.Extensions" Version="3.1.0.67" />
+    <PackageReference Include="Krafs.Publicizer" Version="2.1.0" />
     <PackageReference Include="Lib.Harmony" Version="2.2.2" />
     <PackageReference Include="NuGet.Configuration" Version="6.4.0" />
     <PackageReference Include="NuGet.Protocol" Version="6.4.0" />
@@ -30,7 +30,13 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\DepotDownloader\DepotDownloader\DepotDownloader.csproj" />
+    <Publicize Include="DepotDownloader" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="..\DepotDownloader\DepotDownloader\bin\$(Configuration)\$(TargetFramework)\*.dll">
+      <HintPath>%(Identity)</HintPath>
+    </Reference>
   </ItemGroup>
 
 </Project>
