--- a/src/Bannerlord.ReferenceAssemblies/Bannerlord.ReferenceAssemblies.csproj
+++ b/src/Bannerlord.ReferenceAssemblies/Bannerlord.ReferenceAssemblies.csproj
@@ -16,16 +16,16 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Bannerlord.ModuleManager" Version="4.0.150" />
+    <PackageReference Include="Bannerlord.ModuleManager" Version="5.0.209" />
     <PackageReference Include="CommandLineParser" Version="2.9.1" />
-    <PackageReference Include="Harmony.Extensions" Version="3.2.0.72" />
-    <PackageReference Include="Krafs.Publicizer" Version="2.1.0" />
-    <PackageReference Include="Lib.Harmony" Version="2.2.2" />
-    <PackageReference Include="NuGet.Configuration" Version="6.5.0" />
-    <PackageReference Include="NuGet.Protocol" Version="6.4.0" />
+    <PackageReference Include="Harmony.Extensions" Version="3.2.0.77" PrivateAssets="all" IncludeAssets="runtime; build; native; contentfiles; analyzers; buildtransitive" />
+    <PackageReference Include="Krafs.Publicizer" Version="2.2.1" PrivateAssets="all" IncludeAssets="runtime; build; native; contentfiles; analyzers; buildtransitive" />
+    <PackageReference Include="Lib.Harmony" Version="2.3.0-prerelease.2" />
+    <PackageReference Include="NuGet.Configuration" Version="6.6.1" />
+    <PackageReference Include="NuGet.Protocol" Version="6.6.1" />
     <PackageReference Include="PCLExt.FileStorage-devel" Version="1.5.0.319" />
-    <PackageReference Include="Fody" Version="6.6.4" PrivateAssets="all" />
-    <PackageReference Include="Resourcer.Fody" Version="1.8.0" PrivateAssets="all" />
+    <PackageReference Include="Fody" Version="6.7.0" PrivateAssets="all" />
+    <PackageReference Include="Resourcer.Fody" Version="1.8.1" PrivateAssets="all" />
     <PackageReference Include="System.Linq.Async" Version="6.0.1" />
   </ItemGroup>
 
