--- a/.github/workflows/Generate References.yml
+++ b/.github/workflows/Generate References.yml
@@ -69,12 +69,19 @@ jobs:
       with:
         repo_token: ${{secrets.REPO_ACCESS_TOKEN}}
         repositories: |
-          BUTR/Bannerlord.ReferenceAssemblies.Documentation
-          BUTR/Bannerlord.UIExtenderEx
-          BUTR/Bannerlord.ButterLib
-          Aragas/Bannerlord.MBOptionScreen
-          BUTR/Bannerlord.BUTRLoader
-          BUTR/Bannerlord.BUTR.Shared
-          BUTR/Bannerlord.ReferenceAssemblies.Diff
+            BUTR/Bannerlord.ReferenceAssemblies.Documentation
+            BUTR/Bannerlord.Harmony
+            BUTR/Bannerlord.UIExtenderEx
+            BUTR/Bannerlord.ButterLib
+            Aragas/Bannerlord.MBOptionScreen
+            BUTR/Bannerlord.BLSE
+            BUTR/Bannerlord.BUTRLoader
+            BUTR/Bannerlord.BUTR.Shared
+            BUTR/Bannerlord.Python
+            BUTR/Bannerlord.PHP
+            BUTR/Bannerlord.DiscordRichPresence
+            BUTR/Bannerlord.PlayerSwitcher
+            BUTR/Bannerlord.YellToInspire
+            BUTR/Bannerlord.ReferenceAssemblies.Diff
         event_type: game_version_update_patch
         client_payload: '{"github": ${{ toJson(github) }}}'
