--- a/.github/workflows/Generate References.yml
+++ b/.github/workflows/Generate References.yml
@@ -36,7 +36,7 @@ jobs:
 
     - name: Install Tools
       run: >-
-          dotnet tool install -g JetBrains.Refasmer.CliTool;
+          dotnet tool install -g BepInEx.AssemblyPublicizer.Cli;
           dotnet tool install -g FetchBannerlordVersion.Tool;
 
     - name: Run Bannerlord.ReferenceAssemblies
