--- a/src/Bannerlord.ReferenceAssemblies/Bannerlord.ReferenceAssemblies.csproj
+++ b/src/Bannerlord.ReferenceAssemblies/Bannerlord.ReferenceAssemblies.csproj
@@ -2,9 +2,9 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net8.0</TargetFramework>
+    <TargetFramework>net9.0</TargetFramework>
     <Nullable>enable</Nullable>
-    <LangVersion>10.0</LangVersion>
+    <LangVersion>latest</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
@@ -20,9 +20,6 @@
     <PackageReference Include="AsmResolver.PE.File" Version="5.5.1" />
     <PackageReference Include="Bannerlord.ModuleManager" Version="5.0.226" />
     <PackageReference Include="CommandLineParser" Version="2.9.1" />
-    <PackageReference Include="Harmony.Extensions" Version="3.2.0.77" PrivateAssets="all" IncludeAssets="runtime; build; native; contentfiles; analyzers; buildtransitive" />
-    <PackageReference Include="Krafs.Publicizer" Version="2.2.1" PrivateAssets="all" IncludeAssets="runtime; build; native; contentfiles; analyzers; buildtransitive" />
-    <PackageReference Include="Lib.Harmony.Thin" Version="2.3.3" />
     <PackageReference Include="NuGet.Configuration" Version="6.10.0" />
     <PackageReference Include="NuGet.Protocol" Version="6.10.0" />
     <PackageReference Include="PCLExt.FileStorage-devel" Version="1.5.0.319" />
@@ -30,15 +27,21 @@
     <PackageReference Include="Resourcer.Fody" Version="1.8.1" PrivateAssets="all" />
     <PackageReference Include="System.Linq.Async" Version="6.0.1" />
   </ItemGroup>
-
+  
   <ItemGroup>
-    <Publicize Include="DepotDownloader" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Reference Include="..\DepotDownloader\DepotDownloader\bin\$(Configuration)\$(TargetFramework)\*.dll">
-      <HintPath>%(Identity)</HintPath>
-    </Reference>
+    <PackageReference Include="Microsoft.Windows.CsWin32" Version="0.3.183">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="protobuf-net" Version="3.2.46" />
+    <PackageReference Include="QRCoder" Version="1.6.0" />
+    <PackageReference Include="SteamKit2" Version="3.0.2" />
+    <Compile Include="..\DepotDownloader\DepotDownloader\*.cs" Exclude="..\DepotDownloader\DepotDownloader\Program.cs">
+      <Link>DepotDownloader\*.cs</Link>
+    </Compile>
+    <AdditionalFiles Include="..\DepotDownloader\DepotDownloader\NativeMethods.txt">
+      <Link>DepotDownloader\NativeMethods.txt</Link>
+    </AdditionalFiles>
   </ItemGroup>
 
 </Project>
