--- a/.github/workflows/Generate References.yml
+++ b/.github/workflows/Generate References.yml
@@ -31,7 +31,8 @@ jobs:
 
     - name: Install Tools
       run: >-
-          dotnet tool install -g FetchBannerlordVersion.Tool;
+        dotnet tool install -g FetchBannerlordVersion.Tool;
+        dotnet tool install -g BepInEx.AssemblyPublicizer.Cli;
 
     - name: Run Bannerlord.ReferenceAssemblies
       run: dotnet run --project src/Bannerlord.ReferenceAssemblies/Bannerlord.ReferenceAssemblies.csproj --configuration Release --steamLogin ${{secrets.STEAM_LOGIN}} --steamPassword ${{secrets.STEAM_PASSWORD}} --steamAppId 261550 --steamOS windows --steamOSArch 64 --steamDepotId 261551 261552 --feedUrl https://api.nuget.org/v3/index.json;
