--- a/.github/workflows/Generate References.yml
+++ b/.github/workflows/Generate References.yml
@@ -7,6 +7,10 @@ on:
     - cron: "0 */8 * * *"
   workflow_dispatch:
 
+permissions:
+  contents: read
+  packages: write
+
 env:
   # Disable the .NET logo in the console output.
   DOTNET_NOLOGO: true
@@ -52,20 +56,15 @@ jobs:
     - name: Push to NuGet
       if: steps.check_files.outputs.files_exists == 'true'
       run: |
-        for i in {1..3}; do
-          dotnet nuget push "./src/Bannerlord.ReferenceAssemblies/bin/Release/net9.0/final/*.nupkg" --skip-duplicate -k ${{ secrets.NUGET_KEY }} -s https://www.nuget.org && break
-          echo "Attempt $i failed, retrying in 30s..."
-          sleep 30
-        done
+        dotnet nuget add source https://api.nuget.org/v3/index.json --name NuGet
+        dotnet nuget push "./src/Bannerlord.ReferenceAssemblies/bin/Release/net9.0/final/*.nupkg" --skip-duplicate --source NuGet -k "${{ secrets.NUGET_KEY }}"
 
     - name: Push to GPR
       if: steps.check_files.outputs.files_exists == 'true'
       run: |
-           for f in ./src/Bannerlord.ReferenceAssemblies/bin/Release/net9.0/final/*.nupkg
-           do
-             curl -vX PUT -u "BUTR:${{secrets.GITHUB_TOKEN}}" -F package=@$f https://nuget.pkg.github.com/BUTR/
-           done
-      shell: bash
+        dotnet nuget add source https://nuget.pkg.github.com/BUTR/index.json --name GitHub --username BUTR --password ${{ secrets.GITHUB_TOKEN }} --store-password-in-clear-text
+        dotnet nuget push "./src/Bannerlord.ReferenceAssemblies/bin/Release/net9.0/final/*.nupkg" --skip-duplicate --source GitHub
+      shell: pwsh
 
     - name: Sleep for 10 minutes
       if: steps.check_files.outputs.files_exists == 'true'
