--- a/.github/workflows/Generate References.yml
+++ b/.github/workflows/Generate References.yml
@@ -56,7 +56,7 @@ jobs:
     - name: Push to NuGet
       if: steps.check_files.outputs.files_exists == 'true'
       run: |
-        dotnet nuget push "./src/Bannerlord.ReferenceAssemblies/bin/Release/net9.0/final/*.nupkg" --skip-duplicate --source NuGet -k "${{ secrets.NUGET_KEY }}"
+        dotnet nuget push "./src/Bannerlord.ReferenceAssemblies/bin/Release/net9.0/final/*.nupkg" --skip-duplicate -k "${{ secrets.NUGET_KEY }}" -s "https://api.nuget.org/v3/index.json"
 
     - name: Push to GPR
       if: steps.check_files.outputs.files_exists == 'true'
